After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672312 - When scrolling through thumbnails with mousewheel, eog crashes
When scrolling through thumbnails with mousewheel, eog crashes
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: collection
3.3.x
Other Linux
: Urgent critical
: GNOME3.4
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-17 22:12 UTC by Jack Gandy
Modified: 2012-03-18 17:45 UTC
See Also:
GNOME target: 3.4
GNOME version: ---



Description Jack Gandy 2012-03-17 22:12:05 UTC
When scrolling with arrow buttons or the scrollbar, there is no crash. Using the mousewheel to scroll, however, results in an instant crash with the following error:

EOG:ERROR:eog-thumb-nav.c:87:eog_thumb_nav_scroll_event: code should not be reached

GTK 3.3.18
Eye of GNOME 3.3.91
Comment 1 Felix Riemann 2012-03-18 12:05:37 UTC
Works as it should here, but I have an idea what this could be (which would not be good).

Can you please attach the output of "X -version" ?
Can you also test if the mousewheel works as it should in other parts of eog (e.g. image area, sidebar)?
Comment 2 Felix Riemann 2012-03-18 14:02:09 UTC
Could just produce it myself with Fedora 17 Alpha. The key is X 1.12 coupled with GTK-3.3.18's smooth scrolling support. This seems to cause smooths scroll events instead of the usual scroll events.

Raising priority as we expect X 1.12 on user machines.
Comment 3 Felix Riemann 2012-03-18 17:45:10 UTC
Not sure what touch devices say to this, but as the code in EogThumbNav was only used to make vertical mousewheels horizontal I'd say they should work.

commit 22618a75bcf2a754f5fbe48b2d49c27b5e66ecd5
Author: Felix Riemann <>
Date:   Sun Mar 18 18:28:57 2012 +0100

    EogThumbNav: Fix mousewheel scrolling with gtk-3.3.18 and xserver-1.12
    
    Handle incoming smooth scroll events that are oviously caused by
    the scrollwheel just like legacy scroll events.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=672312
---
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.