EogThumbNav: Fix mousewheel scrolling with gtk-3.3.18 and xserver-1.12

Handle incoming smooth scroll events that are oviously caused by
the scrollwheel just like legacy scroll events.

https://bugzilla.gnome.org/show_bug.cgi?id=672312